updade com logo share

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Imóveis de alto padrão no Tatuapé, exclusivos e fora dos portais convencionais. Consultoria imobiliária especializada para famílias exigentes.">
     <meta property="og:title" content="Fabiana Bettoni Imóveis | Imóveis Exclusivos no Tatuapé">
     <meta property="og:description" content="Acesso a imóveis premium que não estão anunciados nos portais. Consultoria personalizada para famílias no Tatuapé.">
-    <meta property="og:image" content="https://i.imgur.com/HZRzfjY.png">
+    <meta property="og:image" content="https://i.imgur.com/wRqTrcm.png">
     <meta property="og:url" content="https://www.fabianabettoni.com.br">
     <meta name="twitter:card" content="summary_large_image">
     
