--- a/imoveis/sp/sao-paulo/tatuape/apartamento-a-venda-2-suites-3-vagas-cidade-mae-do-ceu-105m/index.html
+++ b/imoveis/sp/sao-paulo/tatuape/apartamento-a-venda-2-suites-3-vagas-cidade-mae-do-ceu-105m/index.html
@@ -384,11 +384,11 @@
                     <p class="text-white text-lg md:text-xl opacity-90 mb-6">Galícia - Cidade Mãe do Céu</p>
                     <div class="flex flex-wrap gap-4">
                         <a href="#contato" class="btn-primary bg-primary text-white font-medium px-8 py-3 rounded-full hover:bg-secondary transition">
-                            <i class="fas fa-calendar-alt mr-2"></i> AGENDAR VISITA
+                            AGENDAR VISITA
                         </a>
                         <a href="https://wa.me/5511947987584?text=Gostaria%20de%20saber%20mais%20sobre%20o%20apartamento%20de%20105m²%20no%20Tatuapé" 
                            class="btn-primary bg-white text-primary font-medium px-8 py-3 rounded-full hover:bg-gray-50 transition">
-                            <i class="fab fa-whatsapp mr-2"></i> FALAR COM CORRETOR
+                            FALAR COM CORRETOR
                         </a>
                     </div>
                 </div>
@@ -604,14 +604,14 @@
     
                     
                     <!-- Room Markers -->
-                    <div class="room-marker" style="top: 30%; left: 20%;" data-room="sala">
+                    <!-- <div class="room-marker" style="top: 30%; left: 20%;" data-room="sala">
                         <i class="fas fa-couch text-xs"></i>
                         <div class="room-tooltip">
                             <h4 class="font-bold text-primary">Sala de Estar</h4>
                             <p class="text-sm text-gray-600">Ampliada com acabamento premium</p>
                         </div>
-                    </div>
-                    <div class="room-marker" style="top: 40%; left: 60%;" data-room="cozinha">
+                    </div> -->
+                   <!--   <div class="room-marker" style="top: 40%; left: 60%;" data-room="cozinha">
                         <i class="fas fa-utensils text-xs"></i>
                         <div class="room-tooltip">
                             <h4 class="font-bold text-primary">Cozinha Americana</h4>
@@ -635,7 +635,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Location Section -->
     <section class="bg-gray-50 py-16">
